--- a/templates/attendance/my_attendance.html
+++ b/templates/attendance/my_attendance.html
@@ -302,8 +302,8 @@
                     <h4 class="fw-semibold text-warning">Permission Status{% if users %} - {{ user_obj.get_full_name() if user_obj else 'Unknown User' }}{% endif %}</h4>
                     <span class="text-warning">
                         Approved permission for today:
-                        {{ permission.start_time.strftime('%I:%M %p') }} to 
-                        {{ permission.end_time.strftime('%I:%M %p') }}
+                        {{ permission.start_time|safe_datetime('%I:%M %p') }} to 
+                        {{ permission.end_time|safe_datetime('%I:%M %p') }}
                     </span>
                 </div>
             </div>
