--- a/templates/dashboard/manager.html
+++ b/templates/dashboard/manager.html
@@ -1269,10 +1269,12 @@
                                     {% if personal_permission_requests %}
                                         {% for permission in personal_permission_requests %}
                                         <tr>
-                                            <td>{{ permission.start_time.strftime('%d/%m/%Y') }}</td>
-                                            <td>{{ permission.start_time.strftime('%H:%M') }} - {{ permission.end_time.strftime('%H:%M') }}</td>
+                                            <td>{{ permission.start_time|safe_datetime('%d/%m/%Y') }}</td>
+                                            <td>{{ permission.start_time|safe_datetime('%H:%M') }} - {{ permission.end_time|safe_datetime('%H:%M') }}</td>
                                             <td>
-                                                {% set duration_seconds = (permission.end_time - permission.start_time).total_seconds() %}
+                                                {% set start_dt = permission.start_time|to_datetime %}
+                                                {% set end_dt = permission.end_time|to_datetime %}
+                                                {% set duration_seconds = (end_dt - start_dt).total_seconds() if start_dt and end_dt else 0 %}
                                                 {% set hours = (duration_seconds // 3600)|int %}
                                                 {% set minutes = ((duration_seconds % 3600) // 60)|int %}
                                                 {{ hours }}h {{ minutes }}m
@@ -1421,7 +1423,7 @@
                                             <div>{{ permission.user.first_name }} {{ permission.user.last_name }}</div>
                                         </div>
                                     </td>
-                                    <td>{{ permission.start_time.strftime('%d/%m/%Y %H:%M') }} - {{ permission.end_time.strftime('%H:%M') }}</td>
+                                    <td>{{ permission.start_time|safe_datetime('%d/%m/%Y %H:%M') }} - {{ permission.end_time|safe_datetime('%H:%M') }}</td>
                                     <td>{{ permission.reason|truncate(30) }}</td>
                                     <td>
                                         <a href="{{ url_for('permission.view', id=permission.id) }}" class="btn btn-sm btn-primary">Review</a>
