--- a/templates/permission/view.html
+++ b/templates/permission/view.html
@@ -56,18 +56,20 @@
                 
                 <div class="row mb-3">
                     <label class="col-sm-3 fw-bold">Date:</label>
-                    <div class="col-sm-9">{{ permission_request.start_time.strftime('%d/%m/%Y') }}</div>
+                    <div class="col-sm-9">{{ permission_request.start_time|safe_datetime('%d/%m/%Y') }}</div>
                 </div>
                 
                 <div class="row mb-3">
                     <label class="col-sm-3 fw-bold">Time Period:</label>
-                    <div class="col-sm-9">{{ permission_request.start_time.strftime('%I:%M %p') }} - {{ permission_request.end_time.strftime('%I:%M %p') }}</div>
+                    <div class="col-sm-9">{{ permission_request.start_time|safe_datetime('%I:%M %p') }} - {{ permission_request.end_time|safe_datetime('%I:%M %p') }}</div>
                 </div>
                 
                 <div class="row mb-3">
                     <label class="col-sm-3 fw-bold">Duration:</label>
                     <div class="col-sm-9">
-                        {% set duration_seconds = (permission_request.end_time - permission_request.start_time).total_seconds() %}
+                        {% set start_dt = permission_request.start_time|to_datetime %}
+                        {% set end_dt = permission_request.end_time|to_datetime %}
+                        {% set duration_seconds = (end_dt - start_dt).total_seconds() if start_dt and end_dt else 0 %}
                         {% set hours = (duration_seconds // 3600)|int %}
                         {% set minutes = ((duration_seconds % 3600) // 60)|int %}
                         {{ hours }} hours and {{ minutes }} minutes
@@ -81,12 +83,12 @@
                 
                 <div class="row mb-3">
                     <label class="col-sm-3 fw-bold">Created On:</label>
-                    <div class="col-sm-9">{{ permission_request.created_at.strftime('%d/%m/%Y %I:%M %p') }}</div>
+                    <div class="col-sm-9">{{ permission_request.created_at|safe_datetime('%d/%m/%Y %I:%M %p') }}</div>
                 </div>
                 
                 <div class="row mb-3">
                     <label class="col-sm-3 fw-bold">Last Updated:</label>
-                    <div class="col-sm-9">{{ permission_request.updated_at.strftime('%d/%m/%Y %I:%M %p') }}</div>
+                    <div class="col-sm-9">{{ permission_request.updated_at|safe_datetime('%d/%m/%Y %I:%M %p') }}</div>
                 </div>
                 
                 {% if permission_request.comment %}
@@ -238,7 +240,7 @@
                             {% set found_other_requests = true %}
                             <a href="{{ url_for('permission.view', id=permission.id) }}" class="list-group-item list-group-item-action">
                                 <div class="d-flex w-100 justify-content-between">
-                                    <h6 class="mb-1">{{ permission.start_time.strftime('%d/%m/%Y %I:%M %p') }} - {{ permission.end_time.strftime('%I:%M %p') }}</h6>
+                                    <h6 class="mb-1">{{ permission.start_time|safe_datetime('%d/%m/%Y %I:%M %p') }} - {{ permission.end_time|safe_datetime('%I:%M %p') }}</h6>
                                     {% if permission.status == 'pending' %}
                                         <span class="badge badge-light-warning">Pending</span>
                                     {% elif permission.status == 'approved' %}
@@ -248,7 +250,7 @@
                                     {% endif %}
                                 </div>
                                 <p class="mb-1 text-muted">{{ permission.reason|truncate(50) }}</p>
-                                <small>{{ permission.created_at.strftime('%d/%m/%Y') }}</small>
+                                <small>{{ permission.created_at|safe_datetime('%d/%m/%Y') }}</small>
                             </a>
                         {% endif %}
                     {% endfor %}
